--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,9 @@ spring:
 
 server:
   port: 8181
+
+identity-providers:
+  facebook:
+    url: ${FACEBOOK_API_URL}
+    client-id: ${FACEBOOK_APP_ID}
+    client-secret: ${FACEBOOK_APP_SECRET}
