--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,22 @@
 spring:
   data:
     neo4j:
-      uri: bolt://localhost:7687
-      username: neo4j
-      password: secret
+      uri: ${NEO4J_URI}
+      username: ${NEO4J_USER}
+      password: ${NEO4J_PASSWORD}
 
 server:
   port: 8181
+  ssl:
+    enabled: true
+    key-store-type: PKCS12
+    key-store: ${KEYSTORE_PATH}
+    key-store-password: ${KEYSTORE_PASSWORD}
+    key-alias: ${KEY_ALIAS}
+
+
+identity-providers:
+  facebook:
+    url: ${FACEBOOK_API_URL}/v${FACEBOOK_API_VERSION}
+    client-id: ${FACEBOOK_APP_ID}
+    client-secret: ${FACEBOOK_APP_SECRET}
