Prepare for release

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>social-circle-${project.version}</finalName>
     </build>
 
 </project>
