--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,18 @@ server:
   ssl:
     enabled: true
     key-store-type: PKCS12
-    key-store: ${KEYSTORE_PATH}
+    key-store: ${CERTIFICATE_FOLDER}/${KEYSTORE_FILE}
     key-store-password: ${KEYSTORE_PASSWORD}
     key-alias: ${KEY_ALIAS}
 
+logging:
+  file:
+    name: ${LOG_PATH}/social_circle.log
+  level:
+    root: WARN
+    org:
+      springframework:
+        web: INFO
 
 identity-providers:
   facebook:
