Active info log level

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ logging:
   file:
     name: ${LOG_PATH}/social_circle.log
   level:
-    root: WARN
+    root: INFO
     org:
       springframework:
         web: INFO
